app1/deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app1
  labels:
    istio-injection: enabled
