app1/deployment/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-v1
  namespace: app1
spec:
    replicas: 1
    selector:
      matchLabels:
        app: app1
        version: v1
    template:
        metadata:
            labels:
                app: app1
                version: v1
        spec:
            containers:
            - name: app1-v1
              image: app1:1.0.0
              ports:
              - containerPort: 8080
