app1/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: app1
  labels:
    app: app1
spec:
    selector:
        app: app1
    ports:
        - protocol: TCP
          port: 80
          targetPort: 8080
